# nova-dashboard-backend

./: README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: constants.py  database.py  metagraph.py
app/models/: crud.py  models.py
app/schemas/: submission_schema.py
app/services/: __init__.py  get_competition_list.py  get_leaderboard.py  get_smiles.py  submission_service.py  submit_results.py
scripts/: run.sh  run_dev.sh
tests/: test_database.py  test_leaderboard.py  test_submit_results.py
