[project]
name = "nova-dashboard-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython==1.85",
    "bittensor==9.0.1",
    "datasets==3.3.2",
    "fair-esm==2.0.0",
    "huggingface-hub==0.29.1",
    "lifelines==0.30.0",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "rdkit==2024.9.4",
    "requests==2.32.3",
    "substrate-interface==1.7.11",
    "scikit-learn==1.6.1",
    "sqlalchemy>=2.0.38",
    "fastapi>=0.110.3",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
]
